# Log_Design

./: CMakeLists.txt  README.md  git_update.sh  main.cpp
basic_glog_design/: .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  base_log.cpp  base_log.h  cmake_install.cmake  compile_commands.json  main.cpp  run  run.sh
basic_glog_design/.cache/clangd/index/: Type.h.31B79043442B80DE.idx  Type.h.393DBA0434B02F63.idx  Type.h.4C86E6EBEC2F981A.idx  __locale_t.h.EFD2EEF88C7BC9DC.idx  alloc_traits.h.13D1B38B073CCF12.idx  alloc_traits.h.E429CD30034E465D.idx  alloca.h.B3C3404035C15EA6.idx  allocator.h.007AC0B614B681A6.idx  array.661D83F8EAEC6A2D.idx  assertions.h.53103A5E3190F8FB.idx  atomic_word.h.8C17CD497028F3E5.idx  atomicity.h.AE30E8ADFAF883F1.idx  base_log.cpp.10945343EC6AAF67.idx  base_log.cpp.15002D72C00E04BE.idx  base_log.cpp.D76DFA2DADBE132D.idx  base_log.h.513044F0B74947D4.idx  base_log.h.81EE6CB0EAE8C6A8.idx  base_log.h.92702FB8729EB551.idx  base_log_test.cpp.83CF47E645D5D2D5.idx  basic_ios.h.38A1B1E0E5B4EA7D.idx  basic_ios.tcc.0E9A74F4860B5F2E.idx  basic_string.h.37110F2A55A495BF.idx  basic_string.tcc.96FD0581ABE02E13.idx  binders.h.6BDD7FC84C0C14C1.idx  byteswap.h.94242F347BA9D8AE.idx  c++allocator.h.13FAFAA887F757E4.idx  c++config.h.B7318D00EA6CE6A0.idx  c++locale.h.C350DFB87F50625F.idx  cctype.03F3490969510981.idx  cdefs.h.FC477E759ACAD3AA.idx  cerrno.AD2F5D1C5561127C.idx  char_traits.h.A8F230B6B3072E4B.idx  clocale.2AA9BC5877C33BB1.idx  codecvt.h.60E40E7317A74163.idx  concept_check.h.268BE59FCB1EEF67.idx  confname.h.EF79434C2509692F.idx  cookie_io_functions_t.h.71B144EB69678E45.idx  cpp_type_traits.h.81DCE7FD737014C2.idx  cpu-set.h.CE4FA57DADE65D4C.idx  cpu_defines.h.2E6D0135E352ACE3.idx  (+202 more)
basic_glog_design/include/: Type.h  base_log.h
basic_glog_design/src/: base_log.cpp
basic_glog_design/test/: base_log_test.cpp
include/: Type.h  demangle.h  stacktrace.h  utilities.h
simple_log_design/: README.md  base_log.cpp  base_log.h  main.cpp  run
src/: .logging.cc.swp  .logging_unittest.cc.swp  README.md  (+9 more)
(+51 files in other folders)
